--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
           <div class="headWrapper">
               <h1>Background Gradient</h1>
               <h1>Generator</h1>
+              <p>by Mohammed</p>
               <h4>Select 2 Colors to change the gradient</h4>
           </div>
 
